--- a/travel-log-server/package.json
+++ b/travel-log-server/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "iconv-lite": "^0.6.3",
     "openai": "^4.90.0"
   }
